--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <!-- Add your articles here -->
     <div class="article-card">
-      <h3><a href="#">Article Title 1</a></h3>
-      <p>Short description or excerpt of the article...</p>
+      <h3><a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece" target="_blank">Karnataka CM promises dedicated MSME department to promote small industries</a></h3>
+      <p>Coverage on the Chief Minister's announcement of a dedicated MSME department aimed at supporting and boosting small industries in Karnataka.</p>
     </div>
 
     <div class="article-card">
