--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
 
     <!-- Add your articles here -->
     <div class="article-card">
+      <img src="first.jpeg" alt="Article image" style="width:100%; border-radius:10px; margin-bottom:10px;" />
       <h3><a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece" target="_blank">Karnataka CM promises dedicated MSME department to promote small industries</a></h3>
-      <p>Coverage on the Chief Minister's announcement of a dedicated MSME department aimed at supporting and boosting small industries in Karnataka.</p>
+      <p><strong>Abstract:</strong> The report highlights Karnataka Chief Minister’s announcement of a dedicated MSME department aimed at boosting small industries and enhancing support systems for entrepreneurs across the State.</p>
+    </div>
+
+    <div class="article-card">
+      <img src="second.jpeg" alt="Delivery agents in rain" style="width:100%; border-radius:10px; margin-bottom:10px;" />
+      <h3><a href="https://www.thehindu.com/news/national/karnataka/delivery-agents-continue-to-brave-bengalurus-monsoon-without-safety-nets/article69605132.ece" target="_blank">Delivery agents continue to brave Bengaluru’s monsoon without safety nets</a></h3>
+      <p><strong>Abstract:</strong> This story sheds light on the challenges faced by delivery workers who navigate Bengaluru’s heavy monsoon without proper safety gear, protective infrastructure, or institutional support, exposing vulnerabilities in gig-economy labour practices.</p>
+    </div>
+
+    <div class="article-card">
+      <img src="third.jpeg" alt="Accessibility issues" style="width:100%; border-radius:10px; margin-bottom:10px;" />
+      <h3><a href="https://www.thehindu.com/news/cities/bangalore/disabled-toilets-not-so-accessible-in-public-spaces-of-bengaluru/article69697454.ece" target="_blank">‘Disabled toilets’ not so accessible in public spaces of Bengaluru</a></h3>
+      <p><strong>Abstract:</strong> This article examines the lack of true accessibility in public ‘disabled-friendly’ toilets across Bengaluru, revealing design flaws, inadequate maintenance, and systemic oversight that restrict usability for people with disabilities.</p>
     </div>
 
     <div class="article-card">
