--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       <p class="abstract"><strong>Abstract:</strong> The shortage of accessible public toilets in Bengaluru continues to create daily challenges for people with disabilities, highlighting the need for inclusive infrastructure planning and better execution.</p>
     </div>
 
+      <!-- FOURTH ARTICLE -->
+    <div class="article">
+      <img src="stem.jpg" alt="STEM has no gender article image" class="article-img">
+      <p class="photo-credit">Newspaper clipping of the article titled 'STEM has no gender: Docu sparks dialogue on women in tech'.</p>
+      <h3><a href="#" target="_blank">STEM has no gender: Docu sparks dialogue on women in tech</a></h3>
+      <p class="abstract"><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s representation in STEM. The article highlights insights from diplomats, STEM leaders, and filmmakers on systemic gender bias, mentorship gaps, and the importance of inclusive professional environments.</p>
+    </div>
+
   </section>
 </body>
 </html>
