--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sagnik Maitra | Portfolio</title>
+
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f8f9fa; color: #222; }
     header { background: #111; color: #fff; padding: 2rem; text-align: center; }
@@ -11,26 +12,27 @@
     .section { padding: 2rem; max-width: 900px; margin: auto; }
     .article { background: #fff; padding: 1.5rem; margin: 1.5rem 0; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
 
-    /* NEW Newspaper Image Styling */
+    /* Image presentation styling */
     .article-img {
       width: 100%;
       max-height: 480px;
-      object-fit: cover; /* Crops neatly */
+      object-fit: cover;
       border-radius: 10px;
       margin-bottom: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15); /* Newspaper shadow effect */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       transition: transform 0.3s ease;
     }
     .article-img:hover {
-      transform: scale(1.03); /* Zoom-on-hover effect */
+      transform: scale(1.03);
     }
 
     .photo-credit { font-size: 0.85rem; color: #555; margin-bottom: 1rem; font-style: italic; }
     .abstract { font-size: 1rem; line-height: 1.5; }
+
+    /* Buttons */
     a { color: #0077cc; text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    /* Button for PDF download */
     .pdf-button {
       display: inline-block;
       padding: 8px 14px;
@@ -41,12 +43,17 @@
       font-size: 0.9rem;
       margin-top: 10px;
     }
-    .pdf-button:hover {
-      background: #005fa3;
+    .pdf-button:hover { background: #005fa3; }
+
+    iframe {
+      margin-top: 15px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Sagnik Maitra</h1>
     <p>Journalist | Reporter | Storyteller</p>
@@ -62,7 +69,7 @@
 
     <!-- FIRST ARTICLE -->
     <div class="article">
-      <img src="first.jpeg" alt="Karnataka MSME event photo" class="article-img">
+      <img src="first.jpeg" class="article-img">
       <p class="photo-credit">Chief Minister Siddaramaiah and Deputy Chief Minister D.K. Shivakumar during the platinum jubilee celebrations of Karnataka Small Scale Industries Association in Bengaluru on Saturday. | Photo Credit: <strong>Sagnik Maitra</strong></p>
       <h3><a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece" target="_blank">Karnataka CM promises dedicated MSME department to promote small industries</a></h3>
       <p class="abstract"><strong>Abstract:</strong> The Karnataka Chief Minister announced the creation of a dedicated MSME department aimed at strengthening small industries, supporting entrepreneurship, and improving ease of doing business across the State.</p>
@@ -70,31 +77,35 @@
 
     <!-- SECOND ARTICLE -->
     <div class="article">
-      <img src="second.jpeg" alt="Delivery agents in Bengaluru" class="article-img">
+      <img src="second.jpeg" class="article-img">
       <p class="photo-credit">Despite being an essential part of Bengaluru’s daily convenience, delivery agents say that their voices often go unheard, particularly when it comes to safety and fair working conditions. | Photo Credit: <strong>K. MURALI KUMAR</strong></p>
       <h3><a href="https://www.thehindu.com/news/national/karnataka/delivery-agents-continue-to-brave-bengalurus-monsoon-without-safety-nets/article69605132.ece" target="_blank">Delivery agents continue to brave Bengaluru’s monsoon without safety nets</a></h3>
-      <p class="abstract"><strong>Abstract:</strong> Delivery workers across Bengaluru highlight growing challenges related to road safety, long working hours, and lack of institutional protection despite their indispensable role in the city’s gig economy.</p>
+      <p class="abstract"><strong>Abstract:</strong> Delivery workers across Bengaluru highlight challenges related to road safety, long working hours, and lack of institutional protection despite their indispensable role in the city’s gig economy.</p>
     </div>
 
     <!-- THIRD ARTICLE -->
     <div class="article">
-      <img src="third.jpeg" alt="Public toilet accessibility" class="article-img">
+      <img src="third.jpeg" class="article-img">
       <p class="photo-credit">A physically challenged person steps out after using a toilet on S. P. Road in Bengaluru. | Photo Credit: <strong>Sudhakara Jain</strong></p>
       <h3><a href="https://www.thehindu.com/news/cities/bangalore/disabled-toilets-not-so-accessible-in-public-spaces-of-bengaluru/article69697454.ece" target="_blank">‘Disabled toilets’ not so accessible in public spaces of Bengaluru</a></h3>
-      <p class="abstract"><strong>Abstract:</strong> The shortage of accessible public toilets in Bengaluru continues to create daily challenges for people with disabilities, highlighting the need for inclusive infrastructure planning and better execution.</p>
+      <p class="abstract"><strong>Abstract:</strong> The lack of accessible public toilets in Bengaluru continues to create daily challenges for people with disabilities, exposing systemic gaps in inclusive infrastructure planning.</p>
     </div>
 
-      <!-- FOURTH ARTICLE -->
+    <!-- FOURTH ARTICLE (STEM Newspaper PDF & Image) -->
     <div class="article">
-      <img src="stem  (1).jpg" alt="STEM has no gender article image" class="article-img">
+      <img src="stem  (1).jpg" class="article-img">
+
       <p class="photo-credit">Newspaper clipping of the article titled 'STEM has no gender: Docu sparks dialogue on women in tech'.</p>
 
-      <h3><a href="#" target="_blank">STEM has no gender: Docu sparks dialogue on women in tech</a></h3>
+      <h3>STEM has no gender: Docu sparks dialogue on women in tech</h3>
 
-      <p class="abstract"><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s representation in STEM. The article highlights insights from diplomats, STEM leaders, and filmmakers on systemic gender bias, mentorship gaps, and the importance of inclusive professional environments.</p>
+      <p class="abstract"><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s representation in STEM. The article highlights insights on systemic gender bias, mentorship gaps, and the need for inclusive professional environments.</p>
 
-      <!-- PDF Download Button (upload PDF to GitHub and replace file name) -->
+      <!-- PDF download button -->
       <a class="pdf-button" href="stem.pdf" download>Download PDF Version</a>
+
+      <!-- Embedded PDF viewer -->
+      <iframe src="stem.pdf" width="100%" height="600px"></iframe>
     </div>
 
   </section>
