--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
       <iframe src="stem.pdf" width="100%" height="600px"></iframe>
     </div>
 
+      <!-- PATRALOK AUTHOR PAGE ARTICLE -->
+    <div class="article">
+      <h3><a href="https://www.patralok.com/author/sagnik-maitrapatralok-com/" target="_blank">More articles by me on Patralok</a></h3>
+      <p class="abstract"><strong>Visit my author page on Patralok to explore my full list of published headlines and stories.</strong></p>
+    </div>
+
   </section>
 </body>
 </html>
