--- a/index.html
+++ b/index.html
@@ -4,52 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sagnik Maitra | Portfolio</title>
-
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #f8f9fa; color: #222; }
     header { background: #111; color: #fff; padding: 2rem; text-align: center; }
     h1 { margin: 0; }
     .section { padding: 2rem; max-width: 900px; margin: auto; }
     .article { background: #fff; padding: 1.5rem; margin: 1.5rem 0; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-
-    /* Image presentation styling */
-    .article-img {
-      width: 100%;
-      max-height: 480px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      transition: transform 0.3s ease;
-    }
-    .article-img:hover {
-      transform: scale(1.03);
-    }
-
+    .article-img { width: 100%; max-height: 480px; object-fit: cover; border-radius: 10px; margin-bottom: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: transform 0.3s ease; }
+    .article-img:hover { transform: scale(1.03); }
     .photo-credit { font-size: 0.85rem; color: #555; margin-bottom: 1rem; font-style: italic; }
     .abstract { font-size: 1rem; line-height: 1.5; }
-
-    /* Buttons */
     a { color: #0077cc; text-decoration: none; }
     a:hover { text-decoration: underline; }
-
-    .pdf-button {
-      display: inline-block;
-      padding: 8px 14px;
-      background: #0077cc;
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 0.9rem;
-      margin-top: 10px;
-    }
+    .pdf-button { display: inline-block; padding: 8px 14px; background: #0077cc; color: #fff; border-radius: 6px; text-decoration: none; font-size: 0.9rem; margin-top: 10px; }
     .pdf-button:hover { background: #005fa3; }
-
-    iframe {
-      margin-top: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
+    iframe { margin-top: 15px; border: 1px solid #ccc; border-radius: 8px; }
   </style>
 </head>
 <body>
@@ -91,27 +60,40 @@
       <p class="abstract"><strong>Abstract:</strong> The lack of accessible public toilets in Bengaluru continues to create daily challenges for people with disabilities, exposing systemic gaps in inclusive infrastructure planning.</p>
     </div>
 
-    <!-- FOURTH ARTICLE (STEM Newspaper PDF & Image) -->
+    <!-- FOURTH ARTICLE (STEM) -->
     <div class="article">
       <img src="stem  (1).jpg" class="article-img">
-
       <p class="photo-credit">Newspaper clipping of the article titled 'STEM has no gender: Docu sparks dialogue on women in tech'.</p>
-
       <h3>STEM has no gender: Docu sparks dialogue on women in tech</h3>
-
       <p class="abstract"><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s representation in STEM. The article highlights insights on systemic gender bias, mentorship gaps, and the need for inclusive professional environments.</p>
-
-      <!-- PDF download button -->
       <a class="pdf-button" href="stem.pdf" download>Download PDF Version</a>
-
-      <!-- Embedded PDF viewer -->
       <iframe src="stem.pdf" width="100%" height="600px"></iframe>
     </div>
 
-      <!-- PATRALOK AUTHOR PAGE ARTICLE -->
+    <!-- PATRA LOK ARTICLES -->
     <div class="article">
-      <h3><a href="https://www.patralok.com/author/sagnik-maitrapatralok-com/" target="_blank">More articles by me on Patralok</a></h3>
-      <p class="abstract"><strong>Visit my author page on Patralok to explore my full list of published headlines and stories.</strong></p>
+      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera in Spooky-Crazy Debut</a></h3>
+      <p class="abstract"><strong>Date:</strong> June 1, 2025 · <strong>Category:</strong> Entertainment</p>
+    </div>
+
+    <div class="article">
+      <h3><a href="https://www.patralok.com/srks-king-gets-bigger-with-new-cast-members/" target="_blank">SRK’s King Gets Bigger with New Cast Members</a></h3>
+      <p class="abstract"><strong>Date:</strong> May 24, 2025 · <strong>Category:</strong> Entertainment</p>
+    </div>
+
+    <div class="article">
+      <h3><a href="https://www.patralok.com/the-royals-rumble-no-spark-still-a-spark/" target="_blank">The Royals’ Rumble: No Spark, Still a Spark?</a></h3>
+      <p class="abstract"><strong>Date:</strong> May 21, 2025 · <strong>Category:</strong> Entertainment</p>
+    </div>
+
+    <div class="article">
+      <h3><a href="https://www.patralok.com/two-stars-one-showdown/" target="_blank">Two Stars, One Showdown</a></h3>
+      <p class="abstract"><strong>Date:</strong> May 20, 2025 · <strong>Category:</strong> Entertainment</p>
+    </div>
+
+    <div class="article">
+      <h3><a href="https://www.patralok.com/tripathi-says-no-babu-rao-to-hera-pheri-buzz/" target="_blank">Tripathi Says ‘No BaBu Rao’ to Hera Pheri Buzz!</a></h3>
+      <p class="abstract"><strong>Date:</strong> May 27, 2025 · <strong>Category:</strong> Entertainment</p>
     </div>
 
   </section>
