--- a/index.html
+++ b/index.html
@@ -4,98 +4,215 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sagnik Maitra | Portfolio</title>
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f8f9fa; color: #222; }
-    header { background: #111; color: #fff; padding: 2rem; text-align: center; }
-    h1 { margin: 0; }
+    :root {
+      --bg: #f5efe6;
+      --card: #ffffffaa;
+      --text: #222;
+      --accent: #7a5af5;
+      --accent-dark: #5a32e0;
+      --glass: rgba(255, 255, 255, 0.45);
+      --blur: blur(12px);
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+    }
+
+    /* NAVBAR */
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: var(--text);
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover { color: var(--accent); }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem;
+    }
+
     .section { padding: 2rem; max-width: 900px; margin: auto; }
-    .article { background: #fff; padding: 1.5rem; margin: 1.5rem 0; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    .article-img { width: 100%; max-height: 480px; object-fit: cover; border-radius: 10px; margin-bottom: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: transform 0.3s ease; }
-    .article-img:hover { transform: scale(1.03); }
-    .photo-credit { font-size: 0.85rem; color: #555; margin-bottom: 1rem; font-style: italic; }
-    .abstract { font-size: 1rem; line-height: 1.5; }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .pdf-button { display: inline-block; padding: 8px 14px; background: #0077cc; color: #fff; border-radius: 6px; text-decoration: none; font-size: 0.9rem; margin-top: 10px; }
-    .pdf-button:hover { background: #005fa3; }
-    iframe { margin-top: 15px; border: 1px solid #ccc; border-radius: 8px; }
+
+    /* GLASS CARD */
+    .article {
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      padding: 1.5rem;
+      margin: 1.5rem 0;
+      border-radius: 16px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+
+    .article-img {
+      width: 100%;
+      max-height: 450px;
+      object-fit: cover;
+      border-radius: 12px;
+      margin-bottom: 10px;
+      transition: 0.3s;
+    }
+    .article-img:hover {
+      transform: scale(1.03);
+    }
+
+    .photo-credit { font-size: 0.85rem; font-style: italic; color: #444; }
+
+    /* COLLAPSIBLE READ MORE */
+    .read-more {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease;
+    }
+    .read-btn {
+      display: inline-block;
+      padding: 8px 12px;
+      margin-top: 10px;
+      background: var(--accent);
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .read-btn:hover { background: var(--accent-dark); }
+
+    /* CATEGORY BADGE */
+    .badge {
+      display: inline-block;
+      padding: 4px 10px;
+      background: var(--accent-dark);
+      color: white;
+      border-radius: 4px;
+      font-size: 0.8rem;
+      margin-bottom: 10px;
+    }
+
+    /* FOOTER */
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background: var(--glass);
+      margin-top: 3rem;
+      backdrop-filter: var(--blur);
+    }
+    footer a { color: var(--accent-dark); text-decoration: none; }
   </style>
+
+  <script>
+    function toggleReadMore(id) {
+      const content = document.getElementById(id);
+      content.style.maxHeight = content.style.maxHeight ? null : content.scrollHeight + 'px';
+    }
+  </script>
 </head>
 <body>
 
-  <header>
+  <!-- NAVBAR -->
+  <nav>
+    <div><strong>Sagnik Maitra</strong></div>
+    <div>
+      <a href="#home">Home</a>
+      <a href="#articles">Articles</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+
+  <header id="home">
     <h1>Sagnik Maitra</h1>
-    <p>Journalist | Reporter | Storyteller</p>
+    <p>Journalist • Reporter • Storyteller</p>
   </header>
 
-  <section class="section">
+  <section class="section" id="about">
     <h2>About Me</h2>
-    <p>I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>, where I covered city, culture, and public-interest stories. I enjoy people-centric reporting, multimedia storytelling, and documenting moments that matter.</p>
+    <p>I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>, covering city, culture, gender, STEM and public-interest stories. I enjoy people-centric reporting and multimedia storytelling.</p>
+    <p><strong>Visit my author page:</strong> <a href="https://www.patralok.com/author/sagnik-maitrapatralok-com/" target="_blank">Patralok — Author Profile</a></p>
   </section>
 
-  <section class="section">
+  <section class="section" id="articles">
     <h2>Published Work</h2>
 
-    <!-- FIRST ARTICLE -->
+    <!-- EXAMPLE ARTICLE STRUCTURE WITH CATEGORY AND COLLAPSIBLE -->
+
     <div class="article">
+      <span class="badge">Politics / Governance</span>
       <img src="first.jpeg" class="article-img">
-      <p class="photo-credit">Chief Minister Siddaramaiah and Deputy Chief Minister D.K. Shivakumar during the platinum jubilee celebrations of Karnataka Small Scale Industries Association in Bengaluru on Saturday. | Photo Credit: <strong>Sagnik Maitra</strong></p>
-      <h3><a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece" target="_blank">Karnataka CM promises dedicated MSME department to promote small industries</a></h3>
-      <p class="abstract"><strong>Abstract:</strong> The Karnataka Chief Minister announced the creation of a dedicated MSME department aimed at strengthening small industries, supporting entrepreneurship, and improving ease of doing business across the State.</p>
+      <p class="photo-credit">Photo Credit: Sagnik Maitra</p>
+      <h3>Karnataka CM promises dedicated MSME department</h3>
+      <div class="read-more" id="read1">
+        <p><strong>Abstract:</strong> Karnataka announces a new MSME-focused government department to boost small-scale industries…</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read1')">Read More</button>
     </div>
 
-    <!-- SECOND ARTICLE -->
     <div class="article">
+      <span class="badge">City / Labour</span>
       <img src="second.jpeg" class="article-img">
-      <p class="photo-credit">Despite being an essential part of Bengaluru’s daily convenience, delivery agents say that their voices often go unheard, particularly when it comes to safety and fair working conditions. | Photo Credit: <strong>K. MURALI KUMAR</strong></p>
-      <h3><a href="https://www.thehindu.com/news/national/karnataka/delivery-agents-continue-to-brave-bengalurus-monsoon-without-safety-nets/article69605132.ece" target="_blank">Delivery agents continue to brave Bengaluru’s monsoon without safety nets</a></h3>
-      <p class="abstract"><strong>Abstract:</strong> Delivery workers across Bengaluru highlight challenges related to road safety, long working hours, and lack of institutional protection despite their indispensable role in the city’s gig economy.</p>
+      <p class="photo-credit">Photo Credit: K. Murali Kumar</p>
+      <h3>Delivery agents brave Bengaluru’s monsoon</h3>
+      <div class="read-more" id="read2">
+        <p><strong>Abstract:</strong> Gig workers face unsafe conditions, long hours, and lack of support as rains worsen…</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read2')">Read More</button>
     </div>
 
-    <!-- THIRD ARTICLE -->
     <div class="article">
+      <span class="badge">Accessibility / Public Spaces</span>
       <img src="third.jpeg" class="article-img">
-      <p class="photo-credit">A physically challenged person steps out after using a toilet on S. P. Road in Bengaluru. | Photo Credit: <strong>Sudhakara Jain</strong></p>
-      <h3><a href="https://www.thehindu.com/news/cities/bangalore/disabled-toilets-not-so-accessible-in-public-spaces-of-bengaluru/article69697454.ece" target="_blank">‘Disabled toilets’ not so accessible in public spaces of Bengaluru</a></h3>
-      <p class="abstract"><strong>Abstract:</strong> The lack of accessible public toilets in Bengaluru continues to create daily challenges for people with disabilities, exposing systemic gaps in inclusive infrastructure planning.</p>
+      <p class="photo-credit">Photo Credit: Sudhakara Jain</p>
+      <h3>‘Disabled toilets’ not accessible in Bengaluru</h3>
+      <div class="read-more" id="read3">
+        <p><strong>Abstract:</strong> Many public toilets labelled as "disabled-friendly" fail in basic accessibility standards…</p>
+      </div>
+      <button class="read-btn" onclick="toggleReadMore('read3')">Read More</button>
     </div>
 
-    <!-- FOURTH ARTICLE (STEM) -->
     <div class="article">
+      <span class="badge">Women / STEM / Culture</span>
       <img src="stem  (1).jpg" class="article-img">
-      <p class="photo-credit">Newspaper clipping of the article titled 'STEM has no gender: Docu sparks dialogue on women in tech'.</p>
-      <h3>STEM has no gender: Docu sparks dialogue on women in tech</h3>
-      <p class="abstract"><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s representation in STEM. The article highlights insights on systemic gender bias, mentorship gaps, and the need for inclusive professional environments.</p>
-      <a class="pdf-button" href="stem.pdf" download>Download PDF Version</a>
-      <iframe src="stem.pdf" width="100%" height="600px"></iframe>
+      <p class="photo-credit">Newspaper clipping: STEM has no gender</p>
+      <h3>STEM has no gender: Docu sparks dialogue</h3>
+      <a class="pdf-button" href="stem.pdf" download>Download PDF</a>
     </div>
 
-    <!-- PATRA LOK ARTICLES -->
-    <div class="article">
-      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera in Spooky-Crazy Debut</a></h3>
-      <p class="abstract"><strong>Date:</strong> June 1, 2025 · <strong>Category:</strong> Entertainment</p>
-    </div>
+    <!-- PATRA LOK ARTICLES SECTION -->
+
+    <h2>External Publications — Patralok</h2>
 
     <div class="article">
-      <h3><a href="https://www.patralok.com/srks-king-gets-bigger-with-new-cast-members/" target="_blank">SRK’s King Gets Bigger with New Cast Members</a></h3>
-      <p class="abstract"><strong>Date:</strong> May 24, 2025 · <strong>Category:</strong> Entertainment</p>
+      <span class="badge">Entertainment</span>
+      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera</a></h3>
+      <p>Feature on influencer-driven cinema experiments.</p>
     </div>
 
     <div class="article">
-      <h3><a href="https://www.patralok.com/the-royals-rumble-no-spark-still-a-spark/" target="_blank">The Royals’ Rumble: No Spark, Still a Spark?</a></h3>
-      <p class="abstract"><strong>Date:</strong> May 21, 2025 · <strong>Category:</strong> Entertainment</p>
-    </div>
-
-    <div class="article">
-      <h3><a href="https://www.patralok.com/two-stars-one-showdown/" target="_blank">Two Stars, One Showdown</a></h3>
-      <p class="abstract"><strong>Date:</strong> May 20, 2025 · <strong>Category:</strong> Entertainment</p>
-    </div>
-
-    <div class="article">
-      <h3><a href="https://www.patralok.com/tripathi-says-no-babu-rao-to-hera-pheri-buzz/" target="_blank">Tripathi Says ‘No BaBu Rao’ to Hera Pheri Buzz!</a></h3>
-      <p class="abstract"><strong>Date:</strong> May 27, 2025 · <strong>Category:</strong> Entertainment</p>
+      <span class="badge">Cinema</span>
+      <h3><a href="https://www.patralok.com/srks-king-gets-bigger-with-new-cast-members/" target="_blank">SRK's KING gets bigger</a></h3>
+      <p>Exploring new cast additions to SRK’s upcoming project.</p>
     </div>
 
   </section>
+
+  <!-- FOOTER -->
+  <footer id="contact">
+    <p>Contact: <a href="mailto:sagnikmaitra@gmail.com">sagnikmaitra@gmail.com</a></p>
+    <p>LinkedIn | Instagram | Portfolio</p>
+  </footer>
+
 </body>
 </html>
