--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
       color: white;
       border-radius: 6px;
       cursor: pointer;
+      border: none;
+      font-size: 0.9rem;
     }
     .read-btn:hover { background: var(--accent-dark); }
 
@@ -102,6 +104,29 @@
       margin-bottom: 10px;
     }
 
+    /* LINKS */
+    a { color: var(--accent-dark); text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    .pdf-button {
+      display: inline-block;
+      padding: 8px 14px;
+      background: var(--accent);
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 0.9rem;
+      margin-top: 10px;
+    }
+    .pdf-button:hover { background: var(--accent-dark); }
+
+    iframe {
+      margin-top: 15px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      width: 100%;
+    }
+
     /* FOOTER */
     footer {
       text-align: center;
@@ -111,6 +136,7 @@
       backdrop-filter: var(--blur);
     }
     footer a { color: var(--accent-dark); text-decoration: none; }
+    footer a:hover { text-decoration: underline; }
   </style>
 
   <script>
@@ -140,78 +166,175 @@
 
   <section class="section" id="about">
     <h2>About Me</h2>
-    <p>I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>, covering city, culture, gender, STEM and public-interest stories. I enjoy people-centric reporting and multimedia storytelling.</p>
-    <p><strong>Visit my author page:</strong> <a href="https://www.patralok.com/author/sagnik-maitrapatralok-com/" target="_blank">Patralok — Author Profile</a></p>
+    <p>
+      I’m a journalism student and former intern at <strong>The Hindu, Bengaluru</strong>,
+      covering city, culture, gender, STEM and public-interest stories.
+      I enjoy people-centric reporting and multimedia storytelling.
+    </p>
+    <p>
+      <strong>Visit my author page:</strong>
+      <a href="https://www.patralok.com/author/sagnik-maitrapatralok-com/" target="_blank">
+        Patralok — Author Profile
+      </a>
+    </p>
   </section>
 
   <section class="section" id="articles">
     <h2>Published Work</h2>
 
-    <!-- EXAMPLE ARTICLE STRUCTURE WITH CATEGORY AND COLLAPSIBLE -->
-
+    <!-- FIRST ARTICLE -->
     <div class="article">
       <span class="badge">Politics / Governance</span>
-      <img src="first.jpeg" class="article-img">
-      <p class="photo-credit">Photo Credit: Sagnik Maitra</p>
-      <h3>Karnataka CM promises dedicated MSME department</h3>
+      <img src="first.jpeg" class="article-img" alt="Karnataka CM MSME event">
+      <p class="photo-credit">
+        Chief Minister Siddaramaiah and Deputy Chief Minister D.K. Shivakumar during the platinum jubilee
+        celebrations of Karnataka Small Scale Industries Association in Bengaluru on Saturday. |
+        Photo Credit: <strong>Sagnik Maitra</strong>
+      </p>
+      <h3>
+        <a href="https://www.thehindu.com/news/national/karnataka/karnataka-cm-promises-dedicated-msme-department-to-promote-small-industries/article69588531.ece"
+           target="_blank">
+          Karnataka CM promises dedicated MSME department to promote small industries
+        </a>
+      </h3>
       <div class="read-more" id="read1">
-        <p><strong>Abstract:</strong> Karnataka announces a new MSME-focused government department to boost small-scale industries…</p>
+        <p><strong>Abstract:</strong> The Karnataka Chief Minister announced the creation of a dedicated
+        MSME department aimed at strengthening small industries, supporting entrepreneurship, and improving
+        ease of doing business across the State.</p>
       </div>
       <button class="read-btn" onclick="toggleReadMore('read1')">Read More</button>
     </div>
 
+    <!-- SECOND ARTICLE -->
     <div class="article">
       <span class="badge">City / Labour</span>
-      <img src="second.jpeg" class="article-img">
-      <p class="photo-credit">Photo Credit: K. Murali Kumar</p>
-      <h3>Delivery agents brave Bengaluru’s monsoon</h3>
+      <img src="second.jpeg" class="article-img" alt="Delivery agents in rain">
+      <p class="photo-credit">
+        Despite being an essential part of Bengaluru’s daily convenience, delivery agents say that their
+        voices often go unheard, particularly when it comes to safety and fair working conditions. |
+        Photo Credit: <strong>K. MURALI KUMAR</strong>
+      </p>
+      <h3>
+        <a href="https://www.thehindu.com/news/national/karnataka/delivery-agents-continue-to-brave-bengalurus-monsoon-without-safety-nets/article69605132.ece"
+           target="_blank">
+          Delivery agents continue to brave Bengaluru’s monsoon without safety nets
+        </a>
+      </h3>
       <div class="read-more" id="read2">
-        <p><strong>Abstract:</strong> Gig workers face unsafe conditions, long hours, and lack of support as rains worsen…</p>
+        <p><strong>Abstract:</strong> Delivery workers across Bengaluru highlight growing challenges related
+        to road safety, long working hours, and lack of institutional protection despite their indispensable
+        role in the city’s gig economy.</p>
       </div>
       <button class="read-btn" onclick="toggleReadMore('read2')">Read More</button>
     </div>
 
+    <!-- THIRD ARTICLE -->
     <div class="article">
       <span class="badge">Accessibility / Public Spaces</span>
-      <img src="third.jpeg" class="article-img">
-      <p class="photo-credit">Photo Credit: Sudhakara Jain</p>
-      <h3>‘Disabled toilets’ not accessible in Bengaluru</h3>
+      <img src="third.jpeg" class="article-img" alt="Accessible toilet in Bengaluru">
+      <p class="photo-credit">
+        A physically challenged person steps out after using a toilet on S. P. Road in Bengaluru. |
+        Photo Credit: <strong>Sudhakara Jain</strong>
+      </p>
+      <h3>
+        <a href="https://www.thehindu.com/news/cities/bangalore/disabled-toilets-not-so-accessible-in-public-spaces-of-bengaluru/article69697454.ece"
+           target="_blank">
+          ‘Disabled toilets’ not so accessible in public spaces of Bengaluru
+        </a>
+      </h3>
       <div class="read-more" id="read3">
-        <p><strong>Abstract:</strong> Many public toilets labelled as "disabled-friendly" fail in basic accessibility standards…</p>
+        <p><strong>Abstract:</strong> The shortage of truly accessible public toilets in Bengaluru continues
+        to create daily challenges for people with disabilities, revealing gaps in inclusive infrastructure
+        planning and maintenance.</p>
       </div>
       <button class="read-btn" onclick="toggleReadMore('read3')">Read More</button>
     </div>
 
+    <!-- FOURTH ARTICLE (STEM) -->
     <div class="article">
       <span class="badge">Women / STEM / Culture</span>
-      <img src="stem  (1).jpg" class="article-img">
-      <p class="photo-credit">Newspaper clipping: STEM has no gender</p>
-      <h3>STEM has no gender: Docu sparks dialogue</h3>
-      <a class="pdf-button" href="stem.pdf" download>Download PDF</a>
+      <img src="stem  (1).jpg" class="article-img" alt="STEM has no gender clipping">
+      <p class="photo-credit">
+        Newspaper clipping of the article titled ‘STEM has no gender: Docu sparks dialogue on women in tech’.
+      </p>
+      <h3>STEM has no gender: Docu sparks dialogue on women in tech</h3>
+      <p><strong>Abstract:</strong> This feature covers the screening of the Slovenian documentary
+      <em>Flow (Tok)</em> at the Bangalore International Centre, followed by a panel discussion on women’s
+      representation in STEM, gender bias and the need for inclusive professional spaces.</p>
+      <a class="pdf-button" href="stem.pdf" download>Download PDF Version</a>
+      <iframe src="stem.pdf" height="600px"></iframe>
     </div>
 
-    <!-- PATRA LOK ARTICLES SECTION -->
-
+    <!-- EXTERNAL PUBLICATIONS — PATRALOK -->
     <h2>External Publications — Patralok</h2>
 
     <div class="article">
       <span class="badge">Entertainment</span>
-      <h3><a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/" target="_blank">Ashish Chanchlani Goes Behind the Camera</a></h3>
-      <p>Feature on influencer-driven cinema experiments.</p>
+      <h3>
+        <a href="https://www.patralok.com/ashish-chanchlani-goes-behind-the-camera-in-spooky-crazy-debut/"
+           target="_blank">
+          Ashish Chanchlani Goes Behind the Camera in Spooky-Crazy Debut
+        </a>
+      </h3>
+      <p class="abstract">A look at influencer-driven horror-comedy and Ashish Chanchlani’s directorial move.</p>
     </div>
 
     <div class="article">
       <span class="badge">Cinema</span>
-      <h3><a href="https://www.patralok.com/srks-king-gets-bigger-with-new-cast-members/" target="_blank">SRK's KING gets bigger</a></h3>
-      <p>Exploring new cast additions to SRK’s upcoming project.</p>
+      <h3>
+        <a href="https://www.patralok.com/srks-king-gets-bigger-with-new-cast-members/"
+           target="_blank">
+          SRK’s King Gets Bigger with New Cast Members
+        </a>
+      </h3>
+      <p class="abstract">Exploring how new casting choices shape the buzz around SRK’s much-anticipated project.</p>
+    </div>
+
+    <div class="article">
+      <span class="badge">Cinema</span>
+      <h3>
+        <a href="https://www.patralok.com/the-royals-rumble-no-spark-still-a-spark/"
+           target="_blank">
+          The Royals’ Rumble: No Spark, Still a Spark?
+        </a>
+      </h3>
+      <p class="abstract">A take on the chemistry, chaos, and charm of a star-studded clash.</p>
+    </div>
+
+    <div class="article">
+      <span class="badge">Cinema</span>
+      <h3>
+        <a href="https://www.patralok.com/two-stars-one-showdown/"
+           target="_blank">
+          Two Stars, One Showdown
+        </a>
+      </h3>
+      <p class="abstract">On-screen rivalry, off-screen narratives, and the spectacle of star power.</p>
+    </div>
+
+    <div class="article">
+      <span class="badge">Entertainment</span>
+      <h3>
+        <a href="https://www.patralok.com/tripathi-says-no-babu-rao-to-hera-pheri-buzz/"
+           target="_blank">
+          Tripathi Says ‘No BaBu Rao’ to Hera Pheri Buzz!
+        </a>
+      </h3>
+      <p class="abstract">Unpacking casting rumours, nostalgia, and fan expectations around an iconic franchise.</p>
     </div>
 
   </section>
 
-  <!-- FOOTER -->
+  <!-- FOOTER / CONTACT -->
   <footer id="contact">
-    <p>Contact: <a href="mailto:sagnikmaitra@gmail.com">sagnikmaitra@gmail.com</a></p>
-    <p>LinkedIn | Instagram | Portfolio</p>
+    <p>
+      Contact:
+      <a href="mailto:maitrarita99@gmail.com">maitrarita99@gmail.com</a>
+    </p>
+    <p>
+      <a href="https://www.linkedin.com/in/sagnik-maitra-" target="_blank">LinkedIn</a> ·
+      <a href="https://www.instagram.com/theycallme_sagnik/" target="_blank">Instagram</a>
+    </p>
   </footer>
 
 </body>
